# einspline

./: Makefile.am  Makefile.in  README  acinclude.m4  configure  configure.ac  cudalt.py  einspline.pc.in  libeinspline.spec  libtool
m4/: ac_cxx_restrict.m4  ax_cc_maxopt.m4  ax_cxx_maxopt.m4  ax_ext.m4  ax_f77_compiler_vendor.m4  ax_f77_maxopt.m4  ax_gcc_archflag.m4
src/: Makefile.am  Plot2d.py  Plot3d.py  TestBspline.c  TestNUBspline.c  aligned_alloc.h  blip_create.c  blip_create.h  bspline.h  bspline_base.h  bspline_create.c  bspline_create.h  bspline_create_cuda.cu  bspline_data.c  bspline_eval_altivec_s.h  bspline_eval_sse_c.h  bspline_eval_sse_d.h  bspline_eval_sse_s.h  bspline_eval_sse_z.h  bspline_eval_std_c.h  bspline_eval_std_d.h  bspline_eval_std_s.h  bspline_eval_std_z.h  bspline_structs.h  bspline_structs_cuda.h  cuda_walker.cu  cuda_walker.h  determinant_update.cu  determinant_update.h  fbspline.c  fbspline.h  fmulti_bspline.c  fnubspline.c  fnubspline.h  multi_bspline.h  multi_bspline_create.c  multi_bspline_create.h  multi_bspline_create_cuda.cu  multi_bspline_create_cuda.h  multi_bspline_cuda_c.cu  (+64 more)
www/: Cinterface.html  Cinterface.shtml  F77multi.shtml  F77nonuniform.html  F77nonuniform.shtml  F77uniform.html  F77uniform.shtml  Makefile.am  NUBinterface.html  NUBinterface.shtml  UBinterface.html  UBinterface.shtml  background.html  benchmark.html  benchmark.shtml  doc.html  doc.shtml  download.html  download.shtml  faq.html  faq.shtml  header.html  header.shtml  index.html  index.shtml  links.html  links.shtml  multiUBinterface.shtml  news.html  news.shtml
