EXTRA_DIST = background.html    \
             benchmark.html     \
             doc.html           \
             download.html      \
             faq.html           \
             header.html        \
             index.html         \
             NUBinterface.html  \
             UBinterface.html   \
             bspline_logo.png   \
             c-BN300y.png       \
             NUBsplineBasis.png \
             UBsplineBasis.png 

